--- a/GAM/assets/minecraft/lang/de_de.json
+++ b/GAM/assets/minecraft/lang/de_de.json
@@ -19,7 +19,7 @@
   "block.minecraft.gold_ore": "Calaveriterz",
 
   "block.minecraft.lapis_ore": "Lapislazuli",
-  "block.minecraft.deepslate_lapis_ore": "Lapislazuli",
+  "block.minecraft.deepslate_lapis_ore": "Tiefenschiefer-Lasuriterz",
   "block.minecraft.lapis_block": "Lasuritblock",
   "container.enchant.lapis.many": "%s Lasurit",
   "container.enchant.lapis.one": "1 Lasurit",
