--- a/GAM/assets/minecraft/lang/en_us.json
+++ b/GAM/assets/minecraft/lang/en_us.json
@@ -1,6 +1,5 @@
 {
-  "block.minecraft.coal_ore": "Anthracite",
-  "block.minecraft.deepslate_coal_ore": "Deepslate Anthracite Ore",
+  "block.minecraft.deepslate_coal_ore": "Anthracite",
 
   "item.minecraft.raw_copper": "Malachite",
   "block.minecraft.raw_copper_block": "Block of Malachite",
