--- a/GAM/assets/minecraft/lang/de_de.json
+++ b/GAM/assets/minecraft/lang/de_de.json
@@ -17,8 +17,8 @@
   "block.minecraft.deepslate_gold_ore": "Tiefenschiefer-Calaveriterz",
   "block.minecraft.gold_ore": "Calaveriterz",
 
-  "block.minecraft.lapis_ore": "Lapislazuli",
-  "block.minecraft.deepslate_lapis_ore": "Tiefenschiefer-Lasuriterz",
+  "block.minecraft.lapis_ore": "Lasuriterz",
+  "block.minecraft.deepslate_lapis_ore": "Lapislazuli",
   "block.minecraft.lapis_block": "Lasuritblock",
   "container.enchant.lapis.many": "%s Lasurit",
   "container.enchant.lapis.one": "1 Lasurit",
